# clean_enoa

./: Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: actions.yml  build.yml  test.yml
clean_enoa/: __init__.py  call_inegi.py  moduloA.py
src/: ejemplo_api.py
tests/: test_call_inegi.py  test_moduloA.py
tests/data/: enoe_indicadores_estrategicos_2005_2020_mensual.csv
